# identitywatch

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DETECTIONS.md  demo.tape
examples/: sample_auth_log.jsonl
src/identitywatch/: __init__.py  __main__.py  cli.py  engine.py  events.py  llm.py  models.py  report.py  rules.py
tests/: test_detections.py  test_events.py  test_report.py
