[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "identitywatch"
version = "0.1.0"
description = "Detection-as-code for identity-first attacks (impossible travel, MFA fatigue, password spraying, session theft), mapped to MITRE ATT&CK."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Yamraj", email = "solankisumitt@gmail.com" }]
keywords = [
    "detection-engineering",
    "detection-as-code",
    "identity-security",
    "mitre-attack",
    "soc",
    "siem",
    "security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []  # stdlib-only

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
identitywatch = "identitywatch.cli:main"

[project.urls]
Homepage = "https://github.com/YAMRAJ13y/identitywatch"
Issues = "https://github.com/YAMRAJ13y/identitywatch/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"src/identitywatch/rules.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
